Android: Added authentication code calculation - Added auth code calculator - Added wrapper for token operations - Fixed PowerAuthTestServerAPI implementations - Removed legacy C++ code, no longer used in the project - "Authorization" changed to "authentication"
Fix #763